--- a/host/tasks/main.yaml
+++ b/host/tasks/main.yaml
@@ -5,10 +5,10 @@
   command: domainname '{{ host_domainname }}'
   when: host_domainname is defined
 
-- name: add hostname to /etc/hosts 127.0.0.1
+- name: configure host in /etc/hosts
   lineinfile: dest=/etc/hosts
-    regexp='^127\.0\.0\.1\s+localhost'
-    line='127.0.0.1 localhost {{ host_hostname }}'
+    regexp="^{{ansible_default_ipv4.address}}\s+"
+    line="{{ansible_default_ipv4.address}} {{host_hostname}}"
     owner=root
     group=root
     mode=0644
