--- a/fail2ban/tasks/main.yaml
+++ b/fail2ban/tasks/main.yaml
@@ -4,53 +4,7 @@
   sudo: yes
 
 - name: create local fail2ban conf
-  command: cp /etc/fail2ban/jail.conf /etc/fail2ban/jail.local
-    creates=/etc/fail2ban/jail.local
-  sudo: yes
-  notify: restart fail2ban
-
-# the DEFAULT section changes need to use lineinfile
-- name: set fail2ban bantime to 1 hour
-  lineinfile: dest=/etc/fail2ban/jail.local
-      regexp="^bantime = "
-      state=present
-      line="bantime = 3600"
-  sudo: yes
-
-# where to send emails
-- name: set fail2ban destemail
-  lineinfile: dest=/etc/fail2ban/jail.local
-      regexp="^destemail = "
-      state=present
-      line="destemail = {{ fail2ban_email }}"
-  sudo: yes
-  when: fail2ban_email is defined
-  notify: restart fail2ban
-
-# FROM address for sent emails
-- name: set fail2ban sender
-  lineinfile: dest=/etc/fail2ban/action.d/sendmail-common.conf
-    regexp='^sender\s*='
-    line='sender = {{fail2ban_sender}}'
-  when: fail2ban_sender is defined
-  notify: restart fail2ban
-
-- name: configure fail2ban action
-  lineinfile: dest=/etc/fail2ban/jail.local
-    regexp='^action = %\(action_'
-    state=present
-    line='action = %(action_mwl)s'
-
-- name: enable fail2ban filters
-  ini_file: dest=/etc/fail2ban/jail.local
-    section="{{item}}"
-    option=enabled
-    value=true
-  with_items:
-    - ssh
-    - ssh-ddos
-    - pam-generic
-    - nginx-http-auth
-    - postfix
+  template: src=jail.local.j2
+    dest=/etc/fail2ban/jail.local
   sudo: yes
   notify: restart fail2ban
