--- a/logwatch/tasks/main.yaml
+++ b/logwatch/tasks/main.yaml
@@ -2,7 +2,7 @@
   apt: pkg=logwatch state=installed
   sudo: yes
 
-- name: conifgure logwatch to email daily
+- name: configure logwatch to email daily
   lineinfile: dest=/etc/cron.daily/00logwatch
     regexp="^/usr/sbin/logwatch"
     line="/usr/sbin/logwatch --output mail --mailto $logwatch_email --detail high"
